--- a/en/header.html
+++ b/en/header.html
@@ -1,4 +1,4 @@
 <header class="header">
-    <h1>Shishamo's garbage world</h1>
+    <div class="header_sitename">Shishamo's garbage world</div>
     <div class="header_description">This is the place to put most of the trash made by the shishamo.<br>If you're the type of person who enjoys looking at garbage, you might want to take a look. lol</div>
 </header>
