--- a/ja/header.html
+++ b/ja/header.html
@@ -1,4 +1,4 @@
 <header class="header">
-    <h1>Shishamo's garbage world</h1>
+    <div class="header_sitename">Shishamo's garbage world</div>
     <div class="header_description">ここはししゃもの作った大体のゴミを置いておく場所です。<br>ゴミを見て喜ぶタイプの人は見てみてもいいかもしれませんねw</div>
 </header>
