--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
     <body>
         <a id="lang_switch"></a>
+        <div>このサイトはJavaScriptが無いと色々困るよ～</div>
+        <div>JavaScript is recommended for this site.</div>
+        <a href="./ja/index.html">ja</a>
+        <a href="./en/index.html">en</a>
         <script src="lang_switch.js"></script>
     </body>
 </html>
