--- a/en/bms.html
+++ b/en/bms.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>Shishamo's garbage world</title>
+        <title>Shishamo BMS List</title>
         <link rel="stylesheet" href="../normalize.css">
         <link rel="stylesheet" href="../defaultcss.css">
         <link rel="stylesheet" href="./style.css">
