--- a/ja/bms.html
+++ b/ja/bms.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <title>Shishamo's garbage world</title>
+        <title>ししゃも製BMS一覧</title>
         <link rel="stylesheet" href="../normalize.css">
         <link rel="stylesheet" href="../defaultcss.css">
         <link rel="stylesheet" href="./style.css">
