--- a/ja/footer.html
+++ b/ja/footer.html
@@ -1,3 +1,6 @@
 <footer class="footer">
     <div class="footer_text">フッッッッッッッッッッッッッッター！</div>
+    <nobr><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><a href="https://www.stylemap.co.jp/"><img src="https://www.f-counter.net/ani1/64/1720712734/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td>
+        <td><a href="https://www.stylemap.co.jp/"><img src="https://www.f-counter.net/ani2/64/1720712734/" alt="アクセスカウンター" border="0" style="margin:0px; padding:0px; border:0px; vertical-align:bottom"></a></td></tr></tbody></table></nobr>
+        
 </footer>
