--- a/en/bms.html
+++ b/en/bms.html
@@ -16,6 +16,8 @@
         <div>It was my great mother's birthday, so I made this.</div>
         <div>I made the chart at random, so I think it looks stupid.</div>
         <div>2024/07/11</div>
+        <div>2024/07/27Update</div>
+        <div>BGI added.</div>
         <div><a href="https://www.dropbox.com/scl/fo/zt8u2vb0qujte18enld61/AHf2vz5FlD0VJ1MV688pyoU?rlkey=xw8ujg9i164cfr6iki9pkhcrz&st=028gw7w0&dl=0">Download</a></div>
 
         <div id="footer"></div>
