--- a/ja/bms.html
+++ b/ja/bms.html
@@ -16,6 +16,8 @@
         <div>我が偉大なる母上の誕生日だったので作りました。</div>
         <div>譜面は適当に作ったので馬鹿みたいな譜面になってると思います。</div>
         <div>2024/07/11</div>
+        <div>2024/07/27更新</div>
+        <div>BGIを追加しました。</div>
         <div><a href="https://www.dropbox.com/scl/fo/zt8u2vb0qujte18enld61/AHf2vz5FlD0VJ1MV688pyoU?rlkey=xw8ujg9i164cfr6iki9pkhcrz&st=028gw7w0&dl=0">ダウンロード</a></div>
 
         <div id="footer"></div>
